<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.movies.list.MovieListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home_movies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:listitem="@layout/row_movie"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="visible"
        android:layout_centerInParent="true" />

</RelativeLayout>