<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.tvshows.list.TVShowListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorite_tvshows"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/row_tvshow"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:layout_centerInParent="true" />

</FrameLayout>